# fidstream

./: .gitignore  CMakeLists.txt  FiducialStreamConfig.cmake.in  FiducialStreamConfigVersion.cmake.in  README.md
apps/: CMakeLists.txt  display_tags.cc  rank_tags.cc
include/fidstr/: AprilTagFiducial.h  AprilTagGenerator.h  AprilTagGenerator.hpp  AprilTagPhysicalLayer.h  DataLinkLayer.h  Fiducial.h  FiducialEncoder.h  FiducialParameters.h  FiducialStream.h  FiducialStreamTypes.h  PhysicalLayer.h  SerialPacketizer.h  Serializer.h  StreamProtocol.h  SynchronizationPrimitives.h  UDPStreamProtocol.h
src/: AprilTagFiducial.cc  AprilTagPhysicalLayer.cc  CMakeLists.txt  DataLinkLayer.cc  Fiducial.cc  PhysicalLayer.cc  SerialPacketizer.cc  StreamProtocol.cc  SynchronizationPrimitives.cc  UDPStreamProtocol.cc
